--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const LIFF_ID = "YOUR_LIFF_ID";
-const GOOGLE_FORM_URL = "https://forms.gle/YOUR_GOOGLE_FORM";
+const LIFF_ID = "2008749179-1dKINV2m";
+const GOOGLE_FORM_URL = "https://forms.gle/RjcRYXiui6ccggZV6";
 /* ================================================= */
 
 /* ---------- Quiz Data ---------- */
