--- a/index.html
+++ b/index.html
@@ -1,190 +1,193 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>เกมทำนายสาขาที่ใช่</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      background: #f5f5f5;
-      padding: 20px;
-    }
-    h2 { color: #333; }
-    button {
-      margin: 6px;
-      padding: 10px 16px;
-      border: none;
-      border-radius: 6px;
-      background: #4CAF50;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover { background: #45a049; }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    pre {
-      text-align: left;
-      white-space: pre-wrap;
-      font-size: 15px;
-    }
-  </style>
-</head>
-<body>
+<meta charset="UTF-8">
+<title>เกมทำนายสาขาที่ใช่</title>
 
-<div class="card">
-  <h2>🔮 สาขาไหนคือฉัน?</h2>
-  <div id="quiz"></div>
-  <button onclick="showResult()">ดูผลลัพธ์</button>
-</div>
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
+<style>
+body {
+  font-family: "Segoe UI", sans-serif;
+  background: #f2f5f8;
+  padding: 20px;
+  text-align: center;
+}
+.card {
+  background: #fff;
+  max-width: 640px;
+  margin: auto;
+  padding: 25px;
+  border-radius: 14px;
+  box-shadow: 0 4px 10px rgba(0,0,0,.15);
+}
+h2, h3 { margin-top: 0; }
+button {
+  width: 100%;
+  margin: 6px 0;
+  padding: 12px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  background: #4CAF50;
+  color: white;
+  cursor: pointer;
+}
+button.secondary {
+  background: #607D8B;
+}
+button:hover { opacity: 0.9; }
+pre {
+  white-space: pre-wrap;
+  text-align: left;
+}
+</style>
+</head>
+
+<body>
+<div class="card" id="app">กำลังโหลด...</div>
 
 <script>
-/* ===================== CONFIG ===================== */
+/* ================= CONFIG ================= */
 const LIFF_ID = "2008749179-1dKINV2m";
 const GOOGLE_FORM_URL = "https://forms.gle/RjcRYXiui6ccggZV6";
-/* ================================================= */
+const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyzAyW9AJIFpERQVetAd9Jt3vMAzDs-TfDMDv9ClldseILllIlUgTLWnTTlFkQozq3W/exec ";
+/* ========================================= */
 
-/* ---------- Quiz Data ---------- */
+let current = 0;
 let answers = [];
 
+/* ============== QUESTIONS ============== */
 const questions = [
-  {
-    q: "เวลาว่างคุณชอบทำอะไร?",
-    opts: [
-      ["ออกกำลังกาย ดูแลสุขภาพ", "A"],
-      ["ฝึกภาษา ดูซีรีส์", "B"],
-      ["ทำกิจกรรมชุมชน", "C"],
-      ["ทดลอง เลี้ยงสัตว์ ปลูกพืช", "D"]
-    ]
-  },
-  {
-    q: "คุณรู้สึกภูมิใจที่สุดเมื่อ…",
-    opts: [
-      ["มีคนบอกว่าดูแลคนอื่นเก่ง", "A"],
-      ["มีคนบอกว่าสื่อสารเก่ง", "B"],
-      ["มีคนบอกว่าเข้าใจคนและสังคม", "C"],
-      ["มีคนบอกว่าคิดเป็นระบบ", "D"]
-    ]
-  }
+{
+  q: "เวลาว่างคุณชอบทำอะไร?",
+  opts: [
+    ["ออกกำลังกาย ดูแลสุขภาพ", "A"],
+    ["ฝึกภาษา ดูซีรีส์", "B"],
+    ["ทำกิจกรรมกับคน/ชุมชน", "C"],
+    ["ทดลอง ปลูกพืช เลี้ยงสัตว์", "D"]
+  ]
+},
+{
+  q: "คุณรู้สึกภูมิใจเมื่อ…",
+  opts: [
+    ["ช่วยให้คนสุขภาพดีขึ้น", "A"],
+    ["สื่อสารแล้วคนเข้าใจ", "B"],
+    ["ช่วยแก้ปัญหาสังคม", "C"],
+    ["หาคำตอบด้วยการทดลอง", "D"]
+  ]
+},
+{
+  q: "ถ้าเลือกเรียนต่อ คุณอยากเรียนแบบไหน?",
+  opts: [
+    ["ด้านสุขภาพ", "A"],
+    ["ด้านภาษา", "B"],
+    ["ด้านสังคม", "C"],
+    ["ด้านวิทยาศาสตร์", "D"]
+  ]
+},
+{
+  q: "คุณถนัดเรื่องใดมากที่สุด?",
+  opts: [
+    ["การดูแลและปฏิบัติ", "A"],
+    ["การสื่อสาร", "B"],
+    ["การเข้าใจผู้คน", "C"],
+    ["การคิดวิเคราะห์", "D"]
+  ]
+},
+{
+  q: "อาชีพในฝันควรเป็นแบบไหน?",
+  opts: [
+    ["ดูแลสุขภาพคน", "A"],
+    ["ทำงานนานาชาติ", "B"],
+    ["พัฒนาสังคม", "C"],
+    ["พัฒนาวิทยาศาสตร์", "D"]
+  ]
+}
 ];
 
-/* ---------- Result Content ---------- */
+/* ============== RESULTS ============== */
 const results = {
-  A: {
-    title: "💪 คุณคือสายสุขภาพตัวจริง!",
-    desc: `
-คุณเป็นคนที่ให้ความสำคัญกับ “ร่างกายและคุณภาพชีวิต”
-ไม่ว่าจะเป็นสุขภาพของตัวเองหรือของคนรอบข้าง
-คุณชอบกิจกรรมที่ได้เคลื่อนไหว ดูแล และพัฒนาให้ดีขึ้นเรื่อย ๆ
-
-🎯 สาขาที่เหมาะกับคุณ
-• วิทยาศาสตร์การกีฬา
-• สาธารณสุขชุมชน
-• วิทยาศาสตร์การแพทย์
-
-อนาคตของคุณอาจเป็นคนที่ช่วยให้ใครหลายคนมีสุขภาพที่ดีขึ้นก็ได้นะ!
-    `
-  },
-  B: {
-    title: "🌍 คุณคือสายสื่อสารระดับอินเตอร์!",
-    desc: `
-คุณเป็นคนเปิดกว้าง ชอบภาษา และสนใจโลกภายนอก
-การได้พูด อ่าน เขียน หรือสื่อสารกับคนหลากหลายวัฒนธรรมคือพลังของคุณ
-
-🎯 สาขาที่เหมาะกับคุณ
-• ภาษาอังกฤษ
-• ภาษาจีน
-
-ใครรู้… อนาคตคุณอาจได้ทำงานต่างประเทศ หรือใช้ภาษาเป็นอาวุธสำคัญในอาชีพก็ได้!
-    `
-  },
-  C: {
-    title: "🤝 คุณคือสายเข้าใจคนและสังคม!",
-    desc: `
-คุณเป็นคนช่างสังเกต เข้าใจผู้คน และสนใจเรื่องราวรอบตัว
-ไม่ว่าจะเป็นชุมชน สังคม หรือการสื่อสาร
-คุณมีแววเป็นคนที่เชื่อมโยงผู้คนเข้าด้วยกันได้อย่างดี
-
-🎯 สาขาที่เหมาะกับคุณ
-• การพัฒนาชุมชน
-• นิเทศศาสตร์และระบบสารสนเทศ
-
-อนาคตคุณอาจเป็นนักพัฒนา นักสื่อสาร หรือครีเอเตอร์ที่สร้างการเปลี่ยนแปลงให้สังคมก็ได้นะ!
-    `
-  },
-  D: {
-    title: "🔬 คุณคือสายวิทย์ตัวจริง!",
-    desc: `
-คุณชอบคิดเป็นระบบ ชอบทดลอง และเรียนรู้จากการลงมือทำ
-วิทยาศาสตร์ ธรรมชาติ หรือเทคโนโลยี คือสิ่งที่ทำให้คุณตื่นเต้น
-
-🎯 สาขาที่เหมาะกับคุณ
-• ครุศาสตร์ (ไฟฟ้า ฟิสิกส์ เคมี ชีววิทยา)
-• เกษตร
-• สัตวศาสตร์
-
-อนาคตคุณอาจเป็นครู นักวิทยาศาสตร์ หรือผู้สร้างนวัตกรรมเพื่อโลกที่ยั่งยืนก็ได้นะ!
-    `
-  }
+A: {
+  title: "💪 คุณคือสายสุขภาพตัวจริง!",
+  desc: "เหมาะกับสาขา:\n• วิทยาศาสตร์การกีฬา\n• สาธารณสุขชุมชน\n• วิทยาศาสตร์การแพทย์"
+},
+B: {
+  title: "🌍 คุณคือสายสื่อสารระดับอินเตอร์!",
+  desc: "เหมาะกับสาขา:\n• ภาษาอังกฤษ\n• ภาษาจีน"
+},
+C: {
+  title: "🤝 คุณคือสายเข้าใจคนและสังคม!",
+  desc: "เหมาะกับสาขา:\n• การพัฒนาชุมชน\n• นิเทศศาสตร์และระบบสารสนเทศ"
+},
+D: {
+  title: "🔬 คุณคือสายวิทย์ตัวจริง!",
+  desc: "เหมาะกับสาขา:\n• ครุศาสตร์ (ไฟฟ้า ฟิสิกส์ เคมี ชีววิทยา)\n• เกษตร\n• สัตวศาสตร์"
+}
 };
 
-/* ---------- Render Quiz ---------- */
-function renderQuiz() {
-  const q = document.getElementById("quiz");
-  questions.forEach((item, i) => {
-    q.innerHTML += `<p><strong>${item.q}</strong></p>`;
-    item.opts.forEach(o => {
-      q.innerHTML += `
-        <button onclick="answers[${i}]='${o[1]}'">${o[0]}</button><br>
-      `;
-    });
+/* ============== FUNCTIONS ============== */
+function renderQuestion() {
+  const q = questions[current];
+  let html = `<h3>ข้อที่ ${current+1} จาก ${questions.length}</h3><p>${q.q}</p>`;
+  q.opts.forEach(o => {
+    html += `<button onclick="answer('${o[1]}')">${o[0]}</button>`;
   });
+  document.getElementById("app").innerHTML = html;
 }
 
-/* ---------- Show Result ---------- */
+function answer(type) {
+  answers.push(type);
+  current++;
+  current < questions.length ? renderQuestion() : showResult();
+}
+
 async function showResult() {
   const count = {};
   answers.forEach(a => count[a] = (count[a] || 0) + 1);
   const final = Object.keys(count).reduce((a,b)=>count[a]>count[b]?a:b);
   const r = results[final];
 
-  document.body.innerHTML = `
-    <div class="card">
-      <h2>${r.title}</h2>
-      <pre>${r.desc}</pre>
-      <button onclick="sendToLine('${r.title.replace(/'/g,"")}')">
-        ส่งผลเข้ามาใน LINE
-      </button><br><br>
-      <a href="${GOOGLE_FORM_URL}" target="_blank">
-        <button>รับเกียรติบัตร</button>
-      </a>
-    </div>
+  const message = `🔮 ผลเกมแนะแนวของคุณ\n${r.title}\n\n${r.desc}`;
+
+  // ส่งผลเข้า LINE
+  await liff.sendMessages([{ type: "text", text: message }]);
+
+  // ส่งผลเข้า Google Sheet
+  fetch(SHEET_WEBAPP_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      userId: liff.getDecodedIDToken().sub,
+      displayName: liff.getDecodedIDToken().name || "",
+      resultCode: final,
+      resultTitle: r.title,
+      resultDesc: r.desc,
+      answers: answers.join(",")
+    })
+  });
+
+  document.getElementById("app").innerHTML = `
+    <h2>${r.title}</h2>
+    <pre>${r.desc}</pre>
+    <a href="${GOOGLE_FORM_URL}" target="_blank">
+      <button>🎓 คลิกเพื่อรับเกียรติบัตร</button>
+    </a>
+    <button class="secondary" onclick="restart()">🔁 ลองอีกครั้ง</button>
   `;
 }
 
-/* ---------- Send Result to LINE ---------- */
-async function sendToLine(text) {
-  await liff.sendMessages([{
-    type: "text",
-    text: `🔮 ผลเกมแนะแนวของคุณ\n${text}`
-  }]);
-  alert("ส่งผลลัพธ์เข้า LINE เรียบร้อยแล้วครับ 😊");
+function restart() {
+  current = 0;
+  answers = [];
+  renderQuestion();
 }
 
-/* ---------- LIFF Init ---------- */
+/* ============== LIFF INIT ============== */
 liff.init({ liffId: LIFF_ID }).then(() => {
   if (!liff.isLoggedIn()) liff.login();
+  renderQuestion();
 });
-
-renderQuiz();
 </script>
-
 </body>
 </html>
