--- a/index.html
+++ b/index.html
@@ -59,74 +59,51 @@ let answers = [];
 
 /* ============== QUESTIONS ============== */
 const questions = [
-{
-  q: "เวลาว่างคุณชอบทำอะไร?",
-  opts: [
+  { q: "เวลาว่างคุณชอบทำอะไร?", opts: [
     ["ออกกำลังกาย ดูแลสุขภาพ", "A"],
     ["ฝึกภาษา ดูซีรีส์", "B"],
     ["ทำกิจกรรมกับคน/ชุมชน", "C"],
     ["ทดลอง ปลูกพืช เลี้ยงสัตว์", "D"]
-  ]
-},
-{
-  q: "คุณรู้สึกภูมิใจเมื่อ…",
-  opts: [
+  ]},
+  { q: "คุณรู้สึกภูมิใจเมื่อ…", opts: [
     ["ช่วยให้คนสุขภาพดีขึ้น", "A"],
     ["สื่อสารแล้วคนเข้าใจ", "B"],
     ["ช่วยแก้ปัญหาสังคม", "C"],
     ["หาคำตอบด้วยการทดลอง", "D"]
-  ]
-},
-{
-  q: "ถ้าเลือกเรียนต่อ คุณอยากเรียนแบบไหน?",
-  opts: [
+  ]},
+  { q: "ถ้าเลือกเรียนต่อ คุณอยากเรียนแบบไหน?", opts: [
     ["ด้านสุขภาพ", "A"],
     ["ด้านภาษา", "B"],
     ["ด้านสังคม", "C"],
     ["ด้านวิทยาศาสตร์", "D"]
-  ]
-},
-{
-  q: "คุณถนัดเรื่องใดมากที่สุด?",
-  opts: [
+  ]},
+  { q: "คุณถนัดเรื่องใดมากที่สุด?", opts: [
     ["การดูแลและปฏิบัติ", "A"],
     ["การสื่อสาร", "B"],
     ["การเข้าใจผู้คน", "C"],
     ["การคิดวิเคราะห์", "D"]
-  ]
-},
-{
-  q: "อาชีพในฝันควรเป็นแบบไหน?",
-  opts: [
+  ]},
+  { q: "อาชีพในฝันควรเป็นแบบไหน?", opts: [
     ["ดูแลสุขภาพคน", "A"],
     ["ทำงานนานาชาติ", "B"],
     ["พัฒนาสังคม", "C"],
     ["พัฒนาวิทยาศาสตร์", "D"]
-  ]
-}
+  ]}
 ];
 
 /* ============== RESULTS ============== */
 const results = {
-A: {
-  title: "💪 คุณคือสายสุขภาพตัวจริง!",
-  desc: "เหมาะกับสาขา:\n• วิทยาศาสตร์การกีฬา\n• สาธารณสุขชุมชน\n• วิทยาศาสตร์การแพทย์"
-},
-B: {
-  title: "🌍 คุณคือสายสื่อสารระดับอินเตอร์!",
-  desc: "เหมาะกับสาขา:\n• ภาษาอังกฤษ\n• ภาษาจีน"
-},
-C: {
-  title: "🤝 คุณคือสายเข้าใจคนและสังคม!",
-  desc: "เหมาะกับสาขา:\n• การพัฒนาชุมชน\n• นิเทศศาสตร์และระบบสารสนเทศ"
-},
-D: {
-  title: "🔬 คุณคือสายวิทย์ตัวจริง!",
-  desc: "เหมาะกับสาขา:\n• ครุศาสตร์ (ไฟฟ้า ฟิสิกส์ เคมี ชีววิทยา)\n• เกษตร\n• สัตวศาสตร์"
-}
+  A: { title: "💪 คุณคือสายสุขภาพตัวจริง!",
+       desc: "เหมาะกับสาขา:\n• วิทยาศาสตร์การกีฬา\n• สาธารณสุขชุมชน\n• วิทยาศาสตร์การแพทย์" },
+  B: { title: "🌍 คุณคือสายสื่อสารระดับอินเตอร์!",
+       desc: "เหมาะกับสาขา:\n• ภาษาอังกฤษ\n• ภาษาจีน" },
+  C: { title: "🤝 คุณคือสายเข้าใจคนและสังคม!",
+       desc: "เหมาะกับสาขา:\n• การพัฒนาชุมชน\n• นิเทศศาสตร์และระบบสารสนเทศ" },
+  D: { title: "🔬 คุณคือสายวิทย์ตัวจริง!",
+       desc: "เหมาะกับสาขา:\n• ครุศาสตร์ (ไฟฟ้า ฟิสิกส์ เคมี ชีววิทยา)\n• เกษตร\n• สัตวศาสตร์" }
 };
 
-/* ============== FUNCTIONS ============== */
+/* ============== GAME LOGIC ============== */
 function renderQuestion() {
   const q = questions[current];
   let html = `<h3>ข้อที่ ${current+1} จาก ${questions.length}</h3><p>${q.q}</p>`;
@@ -141,76 +118,39 @@ function answer(type) {
   current++;
   current < questions.length ? renderQuestion() : showResult();
 }
+
 async function showResult() {
   const count = {};
   answers.forEach(a => count[a] = (count[a] || 0) + 1);
   const final = Object.keys(count).reduce((a,b)=>count[a]>count[b]?a:b);
   const r = results[final];
 
-  const message = `🔮 ผลเกมแนะแนวของคุณ\n${r.title}\n\n${r.desc}`;
+  let userId = "browser";
+  let displayName = "Browser User";
 
-  let userId = "";
-  let displayName = "";
-
-  // 🔐 ดึงข้อมูลผู้ใช้ให้ถูกต้อง
   if (liff.isInClient()) {
     const profile = await liff.getProfile();
     userId = profile.userId;
     displayName = profile.displayName;
 
-    await liff.sendMessages([
-      { type: "text", text: message }
-    ]);
-  } else {
-    userId = "browser-test";
-    displayName = "Browser User";
+    await liff.sendMessages([{ type: "text", text:
+      `🔮 ผลเกมแนะแนวของคุณ\n${r.title}\n\n${r.desc}`
+    }]);
   }
 
-  // 📤 ส่งเข้า Google Sheet (รอผลจริง)
-  try {
-    const res = await fetch(SHEET_WEBAPP_URL, {
-      method: "POST",
-      mode: "no-cors", // สำคัญมาก
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        userId,
-        displayName,
-        resultCode: final,
-        resultTitle: r.title,
-        resultDesc: r.desc,
-        answers: answers.join(",")
-      })
-    });
-  } catch (err) {
-    console.error("Send to Sheet error", err);
-  }
+  const payload = {
+    userId,
+    displayName,
+    resultCode: final,
+    resultTitle: r.title,
+    resultDesc: r.desc,
+    answers: answers.join(",")
+  };
 
-  document.getElementById("app").innerHTML = `
-    <h2>${r.title}</h2>
-    <pre>${r.desc}</pre>
-    <a href="${GOOGLE_FORM_URL}" target="_blank">
-      <button>🎓 คลิกเพื่อรับเกียรติบัตร</button>
-    </a>
-    <button class="secondary" onclick="restart()">🔁 ลองอีกครั้ง</button>
-  `;
-}
-</script>
-
-
-
-  // ส่งผลเข้า Google Sheet
-  fetch(SHEET_WEBAPP_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      userId: liff.getDecodedIDToken().sub,
-      displayName: liff.getDecodedIDToken().name || "",
-      resultCode: final,
-      resultTitle: r.title,
-      resultDesc: r.desc,
-      answers: answers.join(",")
-    })
-  });
+  navigator.sendBeacon(
+    SHEET_WEBAPP_URL,
+    new Blob([JSON.stringify(payload)], { type: "application/json" })
+  );
 
   document.getElementById("app").innerHTML = `
     <h2>${r.title}</h2>
