--- a/index.html
+++ b/index.html
@@ -7,39 +7,90 @@
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 body {
   font-family: "Segoe UI", sans-serif;
-  background: #f2f5f8;
-  padding: 20px;
-  text-align: center;
+  background: #eef2f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+/* Full screen card */
 .card {
-  background: #fff;
-  max-width: 640px;
-  margin: auto;
-  padding: 25px;
-  border-radius: 14px;
-  box-shadow: 0 4px 10px rgba(0,0,0,.15);
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  padding: 24px;
+  box-sizing: border-box;
+  overflow-y: auto;
 }
-h2, h3 { margin-top: 0; }
+
+/* Typography */
+h2 {
+  font-size: 30px;
+  margin-bottom: 16px;
+}
+h3 {
+  font-size: 24px;
+  margin-bottom: 12px;
+}
+p {
+  font-size: 22px;
+  line-height: 1.5;
+  margin-bottom: 24px;
+}
+
+/* Buttons */
 button {
   width: 100%;
-  margin: 6px 0;
-  padding: 12px;
-  font-size: 16px;
+  padding: 18px;
+  margin-bottom: 14px;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 14px;
   border: none;
-  border-radius: 8px;
   background: #4CAF50;
-  color: white;
+  color: #fff;
   cursor: pointer;
 }
+
 button.secondary {
   background: #607D8B;
 }
-button:hover { opacity: 0.9; }
+
+button.outline {
+  background: #ffffff;
+  color: #4CAF50;
+  border: 2px solid #4CAF50;
+}
+
+button.danger {
+  background: #f44336;
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
 pre {
   white-space: pre-wrap;
+  font-size: 20px;
+  line-height: 1.5;
   text-align: left;
+  background: #f7f9fb;
+  padding: 16px;
+  border-radius: 12px;
+}
+
+/* Result buttons group */
+.result-actions {
+  margin-top: 24px;
 }
 </style>
 </head>
@@ -51,6 +102,7 @@ pre {
 /* ================= CONFIG ================= */
 const LIFF_ID = "2008749179-1dKINV2m";
 const GOOGLE_FORM_URL = "https://forms.gle/RjcRYXiui6ccggZV6";
+const FACULTY_PAGE_URL = "https://www.facebook.com/FLAS.RERU"; // 🔗 แก้ได้
 const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyNEdFivthNhhkYYvr6M-v1y5TFzYRH0CHOFOphcnmN0lMhDlLT_77rDLo5sRS4CWvw/exec";
 /* ========================================= */
 
@@ -106,7 +158,7 @@ const results = {
 /* ============== GAME LOGIC ============== */
 function renderQuestion() {
   const q = questions[current];
-  let html = `<h3>ข้อที่ ${current+1} จาก ${questions.length}</h3><p>${q.q}</p>`;
+  let html = `<h3>ข้อที่ ${current + 1} จาก ${questions.length}</h3><p>${q.q}</p>`;
   q.opts.forEach(o => {
     html += `<button onclick="answer('${o[1]}')">${o[0]}</button>`;
   });
@@ -125,50 +177,39 @@ async function showResult() {
   const final = Object.keys(count).reduce((a,b)=>count[a]>count[b]?a:b);
   const r = results[final];
 
-  let userId = "browser";
-  let displayName = "Browser User";
-
   if (liff.isInClient()) {
-    const profile = await liff.getProfile();
-    userId = profile.userId;
-    displayName = profile.displayName;
-
     await liff.sendMessages([{ type: "text", text:
       `🔮 ผลเกมทำนายอาชีพอนาคตของคุณ\n${r.title}\n\n${r.desc}`
     }]);
   }
 
-  const payload = {
-    userId,
-    displayName,
-    resultCode: final,
-    resultTitle: r.title,
-    resultDesc: r.desc,
-    answers: answers.join(",")
-  };
-
-fetch(SHEET_WEBAPP_URL, {
-  method: "POST",
-  headers: {
-    "Content-Type": "text/plain;charset=utf-8"
-  },
-  body: JSON.stringify({
-    userId,
-    displayName,
-    resultCode: final,
-    resultTitle: r.title,
-    resultDesc: r.desc,
-    answers: answers.join(",")
-  })
-});
+  fetch(SHEET_WEBAPP_URL, {
+    method: "POST",
+    headers: { "Content-Type": "text/plain;charset=utf-8" },
+    body: JSON.stringify({
+      resultCode: final,
+      resultTitle: r.title,
+      resultDesc: r.desc,
+      answers: answers.join(",")
+    })
+  });
 
   document.getElementById("app").innerHTML = `
     <h2>${r.title}</h2>
     <pre>${r.desc}</pre>
-    <a href="${GOOGLE_FORM_URL}" target="_blank">
-      <button>🎓 คลิกเพื่อรับเกียรติบัตร</button>
-    </a>
-    <button class="secondary" onclick="restart()">🔁 ลองอีกครั้ง</button>
+
+    <div class="result-actions">
+      <a href="${GOOGLE_FORM_URL}" target="_blank">
+        <button>🎓 คลิกเพื่อรับเกียรติบัตร</button>
+      </a>
+
+      <a href="${FACULTY_PAGE_URL}" target="_blank">
+        <button class="outline">📘 ไปที่เพจคณะศิลปศาสตร์</button>
+      </a>
+
+      <button class="secondary" onclick="restart()">🔁 เล่นอีกครั้ง</button>
+      <button class="danger" onclick="closeLIFF()">⬅️ กลับไปที่ OA</button>
+    </div>
   `;
 }
 
@@ -178,9 +219,23 @@ function restart() {
   renderQuestion();
 }
 
+function closeLIFF() {
+  if (liff.isInClient()) {
+    liff.closeWindow();
+  } else {
+    window.close();
+  }
+}
+
 /* ============== LIFF INIT ============== */
 liff.init({ liffId: LIFF_ID }).then(() => {
-  if (!liff.isLoggedIn()) liff.login();
+  if (liff.isInClient()) {
+    liff.expandWindow(); // เต็มจอ
+  }
+  if (!liff.isLoggedIn()) {
+    liff.login();
+    return;
+  }
   renderQuestion();
 });
 </script>
