--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ pre {
 
 <script>
 /* ================= CONFIG ================= */
-const LIFF_ID = "2008749179-1dKINV2m"; // LIF ID
-const GOOGLE_FORM_URL = "https://forms.gle/RjcRYXiui6ccggZV6"; // 🔗 google form ออกเกียรติบัตร
-const FACULTY_PAGE_URL = "https://www.facebook.com/FLASRERU"; // 🔗 เพจคณะศิลปศาสตร์
-const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyNEdFivthNhhkYYvr6M-v1y5TFzYRH0CHOFOphcnmN0lMhDlLT_77rDLo5sRS4CWvw/exec"; //webapp สำหรับเก็บข้อมูลผลการเล่น
+const LIFF_ID = "2008749179-1dKINV2m";
+const GOOGLE_FORM_URL = "https://forms.gle/RjcRYXiui6ccggZV6";
+const FACULTY_PAGE_URL = "https://www.facebook.com/FLAS.RERU"; // 🔗 แก้ได้
+const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyNEdFivthNhhkYYvr6M-v1y5TFzYRH0CHOFOphcnmN0lMhDlLT_77rDLo5sRS4CWvw/exec";
 /* ========================================= */
 
 let current = 0;
