--- a/index.html
+++ b/index.html
@@ -227,17 +227,31 @@ function closeLIFF() {
   }
 }
 
-/* ============== LIFF INIT ============== */
-liff.init({ liffId: LIFF_ID }).then(() => {
-  if (liff.isInClient()) {
-    liff.expandWindow(); // เต็มจอ
+/* ============== LIFF INIT (SAFE MODE) ============== */
+async function initApp() {
+  try {
+    await liff.init({ liffId: LIFF_ID });
+
+    if (liff.isInClient()) {
+      try {
+        liff.expandWindow();
+      } catch (e) {
+        console.warn("expandWindow failed");
+      }
+    }
+
+    if (!liff.isLoggedIn()) {
+      liff.login();
+      return;
+    }
+
+  } catch (err) {
+    console.warn("LIFF init error", err);
   }
-  if (!liff.isLoggedIn()) {
-    liff.login();
-    return;
-  }
+
+  // ✅ โหลดเกมเสมอ ไม่ว่าล็อกอินหรือไม่
   renderQuestion();
-});
-</script>
-</body>
-</html>
+}
+
+initApp();
+
