--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
-/* ===== RESET ===== */
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 html, body {
   margin: 0;
   padding: 0;
@@ -19,14 +16,11 @@ html, body {
   font-family: "Segoe UI", sans-serif;
   background: #f4f7fb;
 }
-
-/* ===== LAYOUT ===== */
 body {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .app {
   width: 100%;
   height: 100vh;
@@ -36,40 +30,31 @@ body {
   flex-direction: column;
   padding: 20px;
 }
-
-/* ===== HEADER ===== */
 .header {
   text-align: center;
   margin-bottom: 10px;
 }
-
 .header h2 {
   font-size: 26px;
   margin: 0;
 }
-
 .progress {
   font-size: 18px;
   color: #555;
   margin-top: 6px;
 }
-
-/* ===== QUESTION AREA ===== */
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-
 .question {
   font-size: 26px;
   text-align: center;
   margin-bottom: 30px;
   line-height: 1.4;
 }
-
-/* ===== BUTTONS ===== */
 button {
   width: 100%;
   padding: 20px;
@@ -82,60 +67,32 @@ button {
   color: #fff;
   cursor: pointer;
 }
-
-button:active {
-  transform: scale(0.97);
-}
-
-button.secondary {
-  background: #607D8B;
-}
-
 button.outline {
   background: #fff;
   color: #4CAF50;
   border: 3px solid #4CAF50;
 }
+button.secondary { background: #607D8B; }
+button.danger { background: #f44336; }
 
-button.danger {
-  background: #f44336;
-}
-
-/* ===== RESULT ===== */
 .result-title {
-  font-size: 30px;
+  font-size: 28px;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
-
 .result-desc {
-  font-size: 22px;
+  font-size: 20px;
   background: #f7f9fb;
   padding: 20px;
   border-radius: 16px;
   line-height: 1.6;
   white-space: pre-wrap;
 }
-
-/* ===== ACTIONS ===== */
-.actions {
-  margin-top: 24px;
-}
-
-/* ===== RESPONSIVE ===== */
-@media (min-height: 700px) {
-  .question {
-    font-size: 30px;
-  }
-  button {
-    font-size: 24px;
-  }
-}
+.actions { margin-top: 24px; }
 </style>
 </head>
 
 <body>
-
 <div class="app" id="app">กำลังโหลด...</div>
 
 <script>
@@ -151,50 +108,116 @@ let answers = [];
 
 /* ===== QUESTIONS ===== */
 const questions = [
-  { q: "เวลาว่างคุณชอบทำอะไร?", opts: [
-    ["ออกกำลังกาย ดูแลสุขภาพ", "A"],
-    ["ฝึกภาษา ดูซีรีส์", "B"],
-    ["ทำกิจกรรมกับคน/ชุมชน", "C"],
-    ["ทดลอง ปลูกพืช เลี้ยงสัตว์", "D"]
-  ]},
-  { q: "คุณรู้สึกภูมิใจเมื่อ…", opts: [
-    ["ช่วยให้คนสุขภาพดีขึ้น", "A"],
-    ["สื่อสารแล้วคนเข้าใจ", "B"],
-    ["ช่วยแก้ปัญหาสังคม", "C"],
-    ["หาคำตอบด้วยการทดลอง", "D"]
-  ]},
-  { q: "ถ้าเลือกเรียนต่อ คุณอยากเรียนแบบไหน?", opts: [
-    ["ด้านสุขภาพ", "A"],
-    ["ด้านภาษา", "B"],
-    ["ด้านสังคม", "C"],
-    ["ด้านวิทยาศาสตร์", "D"]
-  ]},
-  { q: "คุณถนัดเรื่องใดมากที่สุด?", opts: [
-    ["การดูแลและปฏิบัติ", "A"],
-    ["การสื่อสาร", "B"],
-    ["การเข้าใจผู้คน", "C"],
-    ["การคิดวิเคราะห์", "D"]
-  ]},
-  { q: "อาชีพในฝันควรเป็นแบบไหน?", opts: [
-    ["ดูแลสุขภาพคน", "A"],
-    ["ทำงานนานาชาติ", "B"],
-    ["พัฒนาสังคม", "C"],
-    ["พัฒนาวิทยาศาสตร์", "D"]
-  ]}
+  {
+    q: "ข้อที่ 1 : เวลาเห็นปัญหา คุณมักคิดแบบไหนก่อน",
+    opts: [
+      ["ปัญหานี้กระทบสุขภาพคนไหม", "A"],
+      ["คนอื่นเข้าใจเรื่องนี้ตรงกันไหม", "B"],
+      ["ชุมชนหรือสังคมได้ผลกระทบอย่างไร", "C"],
+      ["หลักการทางวิทยาศาสตร์อธิบายได้ไหม", "D"]
+    ]
+  },
+  {
+    q: "ข้อที่ 2 : วิชาที่เรียนแล้วไม่รู้สึกฝืน",
+    opts: [
+      ["สุขศึกษา / พละ / ชีววิทยามนุษย์", "A"],
+      ["ภาษาอังกฤษ / ภาษาจีน", "B"],
+      ["สังคมศึกษา / การสื่อสาร", "C"],
+      ["ฟิสิกส์ / เคมี / ชีววิทยา", "D"]
+    ]
+  },
+  {
+    q: "ข้อที่ 3 : ถ้าได้ทำกิจกรรมกลุ่ม คุณมักรับบทบาทใด",
+    opts: [
+      ["ดูแลเพื่อน ใส่ใจความเป็นอยู่", "A"],
+      ["พูด อธิบาย ติดต่อประสานงาน", "B"],
+      ["วางแผนกิจกรรม เชื่อมคนหลายฝ่าย", "C"],
+      ["คิดวิธี ทดลอง ลงมือทำ", "D"]
+    ]
+  },
+  {
+    q: "ข้อที่ 4 : คุณสนใจข่าวแบบไหนมากที่สุด",
+    opts: [
+      ["ข่าวสุขภาพ กีฬา โรคระบาด", "A"],
+      ["ข่าวต่างประเทศ วัฒนธรรม ภาษา", "B"],
+      ["ข่าวสังคม ชุมชน สื่อออนไลน์", "C"],
+      ["ข่าววิทยาศาสตร์ เทคโนโลยี สิ่งแวดล้อม", "D"]
+    ]
+  },
+  {
+    q: "ข้อที่ 5 : ถ้าให้เลือกค่าย 1 ค่าย คุณจะเลือก",
+    opts: [
+      ["ค่ายสุขภาพหรือกีฬา", "A"],
+      ["ค่ายภาษา / แลกเปลี่ยนวัฒนธรรม", "B"],
+      ["ค่ายอาสาพัฒนาชุมชน / สื่อสร้างสรรค์", "C"],
+      ["ค่ายวิทยาศาสตร์ เกษตร หรือสิ่งมีชีวิต", "D"]
+    ]
+  }
 ];
 
-/* ===== RESULTS ===== */
+/* ===== RESULTS (เวอร์ชันละเอียด – ตามที่นายท่านให้มา) ===== */
 const results = {
-  A: { title: "💪 สายสุขภาพ", desc: "เหมาะกับ:\n• วิทยาศาสตร์การกีฬา\n• สาธารณสุข\n• วิทยาศาสตร์การแพทย์" },
-  B: { title: "🌍 สายภาษา", desc: "เหมาะกับ:\n• ภาษาอังกฤษ\n• ภาษาจีน" },
-  C: { title: "🤝 สายสังคม", desc: "เหมาะกับ:\n• พัฒนาชุมชน\n• นิเทศศาสตร์" },
-  D: { title: "🔬 สายวิทย์", desc: "เหมาะกับ:\n• ครุศาสตร์\n• เกษตร\n• สัตวศาสตร์" }
+  A: {
+    title: "🅰 สายสุขภาพ",
+    desc: `เหมาะกับสาขา:
+
+🏃 วิทยาศาสตร์การกีฬา
+ชอบการเคลื่อนไหว ร่างกาย และสุขภาพ
+👉 อาชีพ: นักวิทยาศาสตร์การกีฬา โค้ช เทรนเนอร์
+
+🩺 สาธารณสุขชุมชน
+ใส่ใจสุขภาพคนหมู่มากและงานชุมชน
+👉 อาชีพ: นักวิชาการสาธารณสุข เจ้าหน้าที่สุขภาพชุมชน
+
+🧬 วิทยาศาสตร์การแพทย์
+สนใจร่างกายมนุษย์ โรค และการตรวจวิเคราะห์
+👉 อาชีพ: นักเทคนิคการแพทย์ นักวิทยาศาสตร์ห้องปฏิบัติการ`
+  },
+
+  B: {
+    title: "🅱 สายภาษา",
+    desc: `เหมาะกับสาขา:
+
+🇬🇧 ภาษาอังกฤษ
+ชอบภาษาและการสื่อสารสากล
+👉 อาชีพ: ครูภาษา ล่าม แอร์โฮสเตส งานต่างประเทศ
+
+🇨🇳 ภาษาจีน
+สนใจจีน ภาษา วัฒนธรรม และธุรกิจ
+👉 อาชีพ: ล่ามจีน งานการค้าระหว่างประเทศ`
+  },
+
+  C: {
+    title: "🅲 สายสังคม",
+    desc: `เหมาะกับสาขา:
+
+🏘 การพัฒนาชุมชน
+สนใจผู้คน ปัญหาสังคม และพื้นที่ท้องถิ่น
+👉 อาชีพ: นักพัฒนาชุมชน นักจัดการสังคม
+
+📢 นิเทศศาสตร์และระบบสารสนเทศ
+ชอบสื่อ การเล่าเรื่อง และเทคโนโลยีสารสนเทศ
+👉 อาชีพ: นักสื่อสารมวลชน ครีเอเตอร์ PR`
+  },
+
+  D: {
+    title: "🅳 สายวิทยาศาสตร์",
+    desc: `เหมาะกับสาขา:
+
+👩‍🏫 ครุศาสตร์ (วิทยาศาสตร์)
+ชอบวิทยาศาสตร์และการถ่ายทอดความรู้
+👉 อาชีพ: ครูวิทยาศาสตร์ นักการศึกษา
+
+🐄 สัตวศาสตร์
+รักสัตว์ สนใจการเลี้ยงและดูแล
+👉 อาชีพ: นักวิชาการสัตว์ นักฟาร์ม`
+  }
 };
 
 /* ===== RENDER ===== */
 function renderQuestion() {
   const q = questions[current];
-  let html = `
+  document.getElementById("app").innerHTML = `
     <div class="header">
       <h2>เกมทำนายสาขาที่ใช่</h2>
       <div class="progress">ข้อที่ ${current + 1} จาก ${questions.length}</div>
@@ -206,7 +229,6 @@ function renderQuestion() {
       ).join("")}
     </div>
   `;
-  document.getElementById("app").innerHTML = html;
 }
 
 function answer(type) {
@@ -215,33 +237,37 @@ function answer(type) {
   current < questions.length ? renderQuestion() : showResult();
 }
 
+/* ===== RESULT (รองรับผลผสม) ===== */
 function showResult() {
   const count = {};
   answers.forEach(a => count[a] = (count[a] || 0) + 1);
-  const final = Object.keys(count).reduce((a,b)=>count[a]>count[b]?a:b);
-  const r = results[final];
+
+  const sorted = Object.entries(count).sort((a,b)=>b[1]-a[1]);
+  const max = sorted[0][1];
+  const winners = sorted.filter(x=>x[1]===max).map(x=>x[0]);
+
+  const titles = winners.map(k => results[k].title).join(" + ");
+  const descs  = winners.map(k => results[k].desc).join("\n\n");
 
   fetch(SHEET_WEBAPP_URL, {
     method: "POST",
     headers: { "Content-Type": "text/plain;charset=utf-8" },
     body: JSON.stringify({
-      resultCode: final,
-      resultTitle: r.title,
-      resultDesc: r.desc,
+      resultCode: winners.join(","),
       answers: answers.join(",")
     })
   });
 
   document.getElementById("app").innerHTML = `
     <div class="content">
-      <div class="result-title">${r.title}</div>
-      <div class="result-desc">${r.desc}</div>
+      <div class="result-title">ผลลัพธ์ของคุณ</div>
+      <div class="result-desc">${titles}\n\n${descs}</div>
 
       <div class="actions">
         <a href="${GOOGLE_FORM_URL}" target="_blank"><button>🎓 รับเกียรติบัตร</button></a>
-        <a href="${FACULTY_PAGE_URL}" target="_blank"><button class="outline">📘 เพจคณะศิลปศาสตร์</button></a>
+        <a href="${FACULTY_PAGE_URL}" target="_blank"><button class="outline">📘 เพจคณะ</button></a>
         <button class="secondary" onclick="restart()">🔁 เล่นอีกครั้ง</button>
-        <button class="danger" onclick="closeLIFF()">⬅️ กลับไป OA</button>
+        <button class="danger" onclick="closeLIFF()">⬅️ กลับ OA</button>
       </div>
     </div>
   `;
@@ -254,11 +280,8 @@ function restart() {
 }
 
 function closeLIFF() {
-  if (window.liff && liff.isInClient()) {
-    liff.closeWindow();
-  } else {
-    window.close();
-  }
+  if (window.liff && liff.isInClient()) liff.closeWindow();
+  else window.close();
 }
 
 /* ===== INIT ===== */
@@ -271,6 +294,5 @@ async function initApp() {
 }
 initApp();
 </script>
-
 </body>
 </html>
